syntax = "proto3";
package cli;
import "onebot-sdk/pkg/proto/message.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
option go_package="../cli";

service message_grpc_cli {
    //发送消息
	rpc SendMsg(model.MsgForSendGRPC)returns(google.protobuf.Int64Value);
	//发送私聊消息
	rpc SendPrivateMsg(model.PrivateMsgGRPC)returns (google.protobuf.Int64Value);
	// 发送群消息
	rpc SendGroupMsg(model.GroupMsgGRPC)returns (google.protobuf.Int64Value);
	//删除消息
	rpc DelMsg(google.protobuf.Int64Value) returns(google.protobuf.Empty);
	//获取消息
	rpc GetMsg(google.protobuf.Int64Value) returns (model.MessageDataGRPC);
	//获取转发的消息
	rpc GetForwardMsg(google.protobuf.Int64Value) returns (model.ForwardMessageDataGRPC);
}